# tt1_information_retrieval

./: .appveyor.yml  .travis.yml  00_EXAMPLE_OUTPUT_ANSWERS.md  CMakeLists.txt  README.md  cli.cpp  cli.h  database.cpp  database.h  document.h  fileaccess.cpp  fileaccess.h  locale_names.h  main.cpp  notes.md  search.cpp  search.h  test_helper.cpp  test_helper.h  tokenizer.cpp  tokenizer.h  tst_cli.cpp  tst_database.cpp  tst_integration.cpp  tst_search.cpp  tst_tokenizer.cpp
schlag/: Blitzeinschlag.txt  Faustschlag.txt  Feldblock.txt  Kreuzschlag (Seile).txt  Paddelschlag.txt  Peitsche (Schlagwaffe).txt  Reepschläger (Beruf).txt  Schlag (Hunderassen).txt  Schlag (Ort).txt  Schlag (Takt).txt  Schlag (Torfabbau).txt  Schlag (Wald).txt  Schlaganfall.txt  Schlaghosen.txt  Schlagzahl (Kanusport).txt  Schlagzahl (Uhr).txt  Stoßgesetze.txt  Stromschlag.txt  Taubenschlag.txt  Türbeschlag.txt  Uhrschlag.txt
